[gd_scene load_steps=9 format=3 uid="uid://7hpo36n367gi"]

[ext_resource type="Texture2D" uid="uid://c0mfda83euh0i" path="res://Assets/TileSets/Home Made Assets/Exported/TallGrass.png" id="1_v3obi"]
[ext_resource type="Script" uid="uid://6fmhqsqnfvhv" path="res://Scenes/Props/TallGrass/TallGrass.gd" id="1_v4twh"]
[ext_resource type="Texture2D" uid="uid://djxy1itc2q8nn" path="res://Assets/TileSets/Home Made Assets/Exported/steppedgrassTall.png" id="3_chbnw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4twh"]
size = Vector2(15, 15)

[sub_resource type="Animation" id="Animation_chbnw"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k4yqj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uaoap"]
resource_name = "Stepped"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666669),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_stepped_finished"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nax7c"]
_data = {
&"Idle": SubResource("Animation_chbnw"),
&"RESET": SubResource("Animation_k4yqj"),
&"Stepped": SubResource("Animation_uaoap")
}

[node name="TallGrass" type="Node2D" groups=["tall_grass"]]
y_sort_enabled = true
script = ExtResource("1_v4twh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_chbnw")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
z_index = 10
texture = ExtResource("1_v3obi")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_v4twh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_nax7c")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
